--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_kell.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_kell.html
@@ -79,12 +79,12 @@ Kell and Brooks Robinson are both from Arkansas, both played third base for the 
 Kell served on the Arkansas State Highway Commission after his retirement from playing and broadcasting?
 
 
-For more on Kell's interview, as well as other interviews with players from Baseball's Golden Era, visit <a href="http://www.hellobaseballfans.com" TARGET="_blank"><I>www.hellobaseballfans.com</I></a>.
+For more on Kell's interview, as well as other interviews with players from Baseball's Golden Era, visit <a href="http://www.hellobaseballfans.com"><I>www.hellobaseballfans.com</I></a>.
 
 For further reading, try the book <I>Hello everybody, I'm George Kell<I> (Sports Publishing, Champaign, IL, 1998)</I>
 <!--
 
-For more high-quality classic sports photographs, visit <a href="http://www.sports-heros.com" TARGET="_blank"><I>www.sports-heros.com</I></a>.
+For more high-quality classic sports photographs, visit <a href="http://www.sports-heros.com"><I>www.sports-heros.com</I></a>.
 -->
 
 <HR>
