--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_how_to_become.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_how_to_become.html
@@ -45,7 +45,7 @@ All of the steps I've described here don't take place one at a time; usually, a 
 But one thing I will never abandon is my commitment to make the game affordable for the fans. There's a huge demographic out there who believes that baseball is old, slow, and boring. To that end, our marketing and ad slogan has been, "This Century, The Grand Old Game Gets A New Attitude." This is what our team, our league, and our ownership group are all about:  bringing a new, fresh, aggressive attitude to baseball and adhering to the belief that owners should first -- and foremost -- be fans of the game.
 
 
-<I>Tim Darnell is an Atlanta native and long-time baseball fan who is finding his love of the game being challenged by approaching the game as a business. He lives in Atlanta's Brookhaven neighborhood with his tolerant and long suffering wife, Susan.  Follow the Albany Alligators at </I><a href="http://www.albanyalligators.com" TARGET="_blank">www.albanyalligators.com</a>.
+<I>Tim Darnell is an Atlanta native and long-time baseball fan who is finding his love of the game being challenged by approaching the game as a business. He lives in Atlanta's Brookhaven neighborhood with his tolerant and long suffering wife, Susan.  Follow the Albany Alligators at </I><a href="http://www.albanyalligators.com">www.albanyalligators.com</a>.
 
 <HR>
 <a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
