--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_missing_october.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_missing_october.html
@@ -37,7 +37,7 @@ Every winter my dad finds ways not to miss baseball. He'll read player biographi
 
 <I>This article first appeared in the November 17th, 1999 issue of Panic Magazine and is re-printed by permission.</I>
 
-<I>Please visit Panic Magazine online at </I><a href="http://www.panicmag.com" TARGET="_blank">www.panicmag.com</a>.
+<I>Please visit Panic Magazine online at </I><a href="http://www.panicmag.com">www.panicmag.com</a>.
 
 <HR>
 <a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
