--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_poems.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_poems.html
@@ -80,7 +80,7 @@ his mitt.
 rolls of action photos while he played catch with strangers on Wrigley Field after a long tour.
 
 Dan's baseball poems can also be seen in the 2001
-issue of <a href="http://www.sabr.org" TARGET="_blank">SABR's</a> "The National Pastime". </i>
+issue of <a href="http://www.sabr.org">SABR's</a> "The National Pastime". </i>
 
 <HR>
 <a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
