Vol 1 No 3 - McGwire 17 HR Behind Mantle

--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_poems.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_poems.html
@@ -8,7 +8,7 @@
 
 <BODY>
 <H2>Baseball Poems</H2>
-<i>by Dan Zamudio</i>
+<em>by Dan Zamudio</em>
 
 
 <U>Bat boy</U>
@@ -57,11 +57,11 @@ stormy weather.
 
 
 
-<i>Dan Zamudio is a Chicago writer and lifelong Cub fan who recently forced his tired girlfriend to take three
+<em>Dan Zamudio is a Chicago writer and lifelong Cub fan who recently forced his tired girlfriend to take three
 rolls of action photos while he played catch with strangers on Wrigley Field after a long tour.
 
 Dan's baseball poems can also be seen in the 2001
-issue of SABR's "The National Pastime". </i>
+issue of SABR's "The National Pastime". </em>
 
 <HR>
 <a href="bi_vol_1_no_3_home.html">Back to Table of Contents</a>
