--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_tom_tresh.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_tom_tresh.html
@@ -8,7 +8,7 @@
 
 <BODY>
 <H2>Former Yankee Tom Tresh Recalls Stellar Rookie Year</H2>
-<i>by Todd Newville</i>
+<em>by Todd Newville</em>
 
 
 	Imagine being a rookie with one of the greatest franchises in professional sports - the New York Yankees. You go on to win the American League's Rookie of the Year award and the Yankees go on to win the World Series in a thrilling seven-game matchup with the vaunted San Francisco Giants.
@@ -74,11 +74,11 @@
 	"Sure, I might make millions today," Tresh said, "but you really can't have any regrets when you played for one of the greatest teams in history. I'll always cherish the experience."
 
 
-<i>Todd Newville lives in Oklahoma City and has a wife named Melissa. A journalism graduate from the University of Oklahoma in 1992, he has written about all sports ranging from basketball to bowling. He currently is editor for a publication called Pro Rodeo World - but baseball is truly his passion.
+<em>Todd Newville lives in Oklahoma City and has a wife named Melissa. A journalism graduate from the University of Oklahoma in 1992, he has written about all sports ranging from basketball to bowling. He currently is editor for a publication called Pro Rodeo World - but baseball is truly his passion.
 
 Todd has designed his own website - Baseball Todd's Dugout. Visit soon at <a href="http://www.baseballtoddsdugout.com" 
 CLASS="BaseballInk">www.baseballtoddsdugout.com</a>.
-</i>
+</em>
 
 
 <HR>
