--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_bunkos_quest.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_bunkos_quest.html
@@ -10,8 +10,8 @@
 <H2>Bunko's Quest</H2>
 by Mike McCann
 
-<I>
-Mike McCann, age 25, has been a baseball fan as long as he can remember. He has a goal to visit every major and minor league baseball stadium. This regularly-appearing column will follow the progress of "Bunko" and his quest.</I>
+<em>
+Mike McCann, age 25, has been a baseball fan as long as he can remember. He has a goal to visit every major and minor league baseball stadium. This regularly-appearing column will follow the progress of "Bunko" and his quest.</em>
 
 
 Labor Day weekend is a significant point in the minor league baseball season.  It is the last weekend of regular season games and the last chance for teams to make one final run for a playoff spot.  For me, it is my final opportunity to attend a minor league baseball game.  It is also a weekend with an extra day off from work, so there is an added incentive to take a little trip to see a few more games.
@@ -33,11 +33,11 @@ One additional element, which makes my quest more interesting, is that when team
 I'll do my best to keep you informed of my travels.  Hope you are able to get out to a game yourself soon!
 
 
-<I>
+<em>
 Mike is always looking for people to attend baseball games with him, so if you are interested, please contact him at <a href="mailto:bunko@udel.edu">bigbunko@netzero.net</a>
 
 Learn more about Bunko's quest to visit every major and minor league stadium: <a href="http://www.netcolony.com/sports/bunko/" TARGET="_top">http://www.netcolony.com/sports/bunko/</a>
-</I>
+</em>
 
 
 <HR>
