--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_how_to_become.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_how_to_become.html
@@ -9,7 +9,7 @@
 <BODY>
 <H2>How To Become A Baseball CEO...</H2>
 <H4>...and Retain Your Identity</H4>
-<I>by Tim Darnell</I>
+<em>by Tim Darnell</em>
 
 
 Professional baseball team owners have never been very adept at public relations. Otherwise, they wouldn't have developed such an unflattering image over the years. From the overweight, stogie-puffing icons of old to the suite-residing, shrimp-cocktail munching owners of modern times, baseball's CEOs have always received more than their share of bad press, and most of it has been entirely justified.
@@ -45,7 +45,7 @@ All of the steps I've described here don't take place one at a time; usually, a 
 But one thing I will never abandon is my commitment to make the game affordable for the fans. There's a huge demographic out there who believes that baseball is old, slow, and boring. To that end, our marketing and ad slogan has been, "This Century, The Grand Old Game Gets A New Attitude." This is what our team, our league, and our ownership group are all about:  bringing a new, fresh, aggressive attitude to baseball and adhering to the belief that owners should first -- and foremost -- be fans of the game.
 
 
-<I>Tim Darnell is an Atlanta native and long-time baseball fan who is finding his love of the game being challenged by approaching the game as a business. He lives in Atlanta's Brookhaven neighborhood with his tolerant and long suffering wife, Susan.  Follow the Albany Alligators at </I><a href="http://www.albanyalligators.com">www.albanyalligators.com</a>.
+<em>Tim Darnell is an Atlanta native and long-time baseball fan who is finding his love of the game being challenged by approaching the game as a business. He lives in Atlanta's Brookhaven neighborhood with his tolerant and long suffering wife, Susan.  Follow the Albany Alligators at </em><a href="http://www.albanyalligators.com">www.albanyalligators.com</a>.
 
 <HR>
 <a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
