--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ive_done_what_i_can.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ive_done_what_i_can.html
@@ -8,7 +8,7 @@
 
 <BODY>
 <H2>I've Done What I Can</H2>
-<I>by Rick Lopez</I>
+<em>by Rick Lopez</em>
 
 
 He had a clutch going on me, his free hand up deep under my arm, as if I belonged to him then. Cream-colored latex gloves and heavy boots. Vaseline on my bicep, his tool-hand pressing a broad furrow into my upper arm, buzz of electricity throwing ink into my skin, the needle a blur. It was, as he said, "like being scratched." Not pain, but a deep centering hum that put tension into your teeth. It did not distress me.
@@ -48,7 +48,7 @@ And the gloves snap off: "That's it, it's done..." I walk quickly to the mirror,
 Re-printed with permission from "Baseball and the 10,000 Things."
 
 
-<I>After a 20-year sabbatical from the world of baseball, Rick Lopez has returned.  Follow his chronicled journey in "Baseball and the 10,000 Things" as part of "The Whole Shebang" at:  </I><a href="http://www.velocity.net/~bb10k">http://www.velocity.net/~bb10k<A>
+<em>After a 20-year sabbatical from the world of baseball, Rick Lopez has returned.  Follow his chronicled journey in "Baseball and the 10,000 Things" as part of "The Whole Shebang" at:  </em><a href="http://www.velocity.net/~bb10k">http://www.velocity.net/~bb10k<A>
 
 
 <HR>
