--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_letters_to_publisher.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_letters_to_publisher.html
@@ -32,14 +32,14 @@ D. Quinn
 
 -- Pub. Note:  Here is the address of the MLB Player's Association:
 
-<I>
+<em>
 Major League Baseball Players Association
 Donald M. Fehr, Executive Director and General Counsel
 12 East 49th Street
 New York, NY 10017
 (212) 826-0808
 Fax: (212) 752-4378
-</I>
+</em>
 
 
 	*	*	*	*	*	*	*	*	*
@@ -104,8 +104,8 @@ However, I would have picked the following players:
 
 Addendum: here's a quote by a California Hall of Famer about a Maryland Hall of Famer:
 
-<I>
-"When Neil Armstrong first set foot on the moon, he and all the space scientists were puzzled by an unidentifiable white object. I knew immediately what it was. That was a home run ball hit off me in 1937 by Jimmie Foxx." -- Hall of Fame pitcher Lefty Gomez</I>
+<em>
+"When Neil Armstrong first set foot on the moon, he and all the space scientists were puzzled by an unidentifiable white object. I knew immediately what it was. That was a home run ball hit off me in 1937 by Jimmie Foxx." -- Hall of Fame pitcher Lefty Gomez</em>
 
 T. Tilert
 <HR>
