--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_opening_day.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_opening_day.html
@@ -8,7 +8,7 @@
 
 <BODY>
 <H2>Opening Day</H2>
-<I>by Karl Jacobsen</I>
+<em>by Karl Jacobsen</em>
 
 
 Opening Day!  Just saying those two words creates a glimmer of hope that one of my two teams will wind up playing in Yankee Stadium come October.  Why Yankee Stadium?  Because everyone who knows the current state of baseball realizes that the World Series is an annual New York event -- or so it seems.  Am I upset about recent, and past, Yankee championships?  Not in the least.  Remember, New York fostered the beginnings of the game over a hundred and fifty years ago, and much of traditional baseball history has revolved around New York teams.  Don't get me wrong, if Hell had a baseball team, I'd root for Hell against the Yankees, but for an old traditionalist like me, there is something right about seeing the American League pennant waving over Yankee Stadium.
@@ -23,7 +23,7 @@ My love affair with the Braves continued through the early Sixties.  I recall sp
 
 And then they left.
 
-The Braves moving to Atlanta was like your girlfriend dumping you.  Only worse.  My friends and I felt like we were betrayed.  We couldn't understand how they could just leave?  After all, they were <I>our</I> team.  Most of my friends shifted their allegiance to Chicago, but I couldn't stoop to listen to the Cubs games.  I had standards.  So, like an old boyfriend who just can't let go, I continued to follow Aaron, Mathews, and the rest of my team even after their hats were emblazoned with that infamous letter -- reminiscent of the same letter that Hester Prynne was forced to wear on her clothing after a similar indiscretion.
+The Braves moving to Atlanta was like your girlfriend dumping you.  Only worse.  My friends and I felt like we were betrayed.  We couldn't understand how they could just leave?  After all, they were <em>our</em> team.  Most of my friends shifted their allegiance to Chicago, but I couldn't stoop to listen to the Cubs games.  I had standards.  So, like an old boyfriend who just can't let go, I continued to follow Aaron, Mathews, and the rest of my team even after their hats were emblazoned with that infamous letter -- reminiscent of the same letter that Hester Prynne was forced to wear on her clothing after a similar indiscretion.
 
 The years passed, and in 1974 my company transferred me to Atlanta where I was once again able to follow my team on a daily basis.  Only this time the Braves were arguably one of the worst teams in the major leagues.  Like I did as a boy, I spent many nights in bed following Aaron and the guys on their frequent West Coast road trips.  This time, however, my wife was sleeping by my side -- having been put to sleep by Ernie Johnson's voice.
 
@@ -44,7 +44,7 @@ I may have been thousands of miles from home, but it was April, and I was sittin
 It's winter now, and as I look forward to spring training, I sit and daydream about what kind of miracle it would take for my Brewers to be playing in Yankee stadium this October.  Remember the musical "Damn Yankees?"  Does anyone know how to get in touch with Mr. Applegate?  Just remember, if the Brewers opening day lineup includes a great young prospect that goes by the name of Joe Hardy, you can bet that the Brewers will win the World Series.  And if Joe Hardy does indeed wind up with the Brewers, please do me a favor.  Send my wife some roses -- she'll be lonely.
 
 
-<I>Karl Jacobsen has a strong interest in 19th century baseball and has written a historical piece for </I><a href="http://www.efqreview.com">Elysian Fields Quarterly</a><I>.  Other than baseball, his interests include canoeing, fishing, and writing.</I>
+<em>Karl Jacobsen has a strong interest in 19th century baseball and has written a historical piece for </em><a href="http://www.efqreview.com">Elysian Fields Quarterly</a><em>.  Other than baseball, his interests include canoeing, fishing, and writing.</em>
 
 
 <HR>
