--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_shaking_hands.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_shaking_hands.html
@@ -9,7 +9,7 @@
 <BODY>
 <H2>Shaking Hands With The Babe</H2>
 <H4>Young man fulfilled his dream of meeting the Sultan of Swat</H4>
-<I>by Steve A. Maze</I>
+<em>by Steve A. Maze</em>
 
 
 It is a once-in-a-lifetime opportunity for many people, and most will never get to experience it. If it does happen, you will definitely remember it the rest of your life. I am talking about meeting one's idol. What most of us wouldn't give to be able to talk to our idol -- if only for a few seconds -- or to shake their hand. Well, that's exactly what happened to one of my friends 66 years ago at Yankee Stadium.
@@ -34,8 +34,8 @@ The Babe then reached over the railing and shook hands with both brothers.
 Bailey wasn't as fortunate as his brother that day. He didn't have a baseball for Ruth to autograph. Yet, he has no regrets. The Alabama farm boy had accomplished what he so much wanted to do. He had met his idol, and he had gotten to shake hands with the great Babe Ruth.
 
 
-<I>
-Steve A. Maze is a former "wanna-be" major leaguer who wasn't talented enough to play baseball and is barely talented enough to write about it.</I>
+<em>
+Steve A. Maze is a former "wanna-be" major leaguer who wasn't talented enough to play baseball and is barely talented enough to write about it.</em>
 
 
 <HR>
