--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_tommy_t.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_tommy_t.html
@@ -14,7 +14,7 @@ This is one of the finest movies ever made.  Notice that I did not say that it i
 
 Having said that, Field of Dreams is NOT really a baseball movie.
 
-What?  Not a <I>baseball</I> movie?
+What?  Not a <em>baseball</em> movie?
 
 Oh, sure, there are baseball scenes in it, but the film uses baseball as a device; the primary theme is dreams -- dreaming dreams, living dreams, having dreams shattered, picking up the pieces of your dreams, and getting a second chance at fulfilling lost dreams.  The secondary theme of the movie is relationships -- between husbands and wives, fathers and daughters, between neighbors, but mostly between fathers and sons.
 
