--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_bunkos_quest.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_bunkos_quest.html
@@ -10,8 +10,8 @@
 <H2>Bunko's Quest</H2>
 by Mike McCann
 
-<I>
-Mike McCann, age 25, has been a baseball fan as long as he can remember. He has a goal to visit every major and minor league baseball stadium. This regularly-appearing column will follow the progress of "Bunko" and his quest.</I>
+<em>
+Mike McCann, age 25, has been a baseball fan as long as he can remember. He has a goal to visit every major and minor league baseball stadium. This regularly-appearing column will follow the progress of "Bunko" and his quest.</em>
 
 
 I always look forward to Opening Day of the baseball season.  It marks the end of winter and the beginning of warmer weather.  It means that spring training is finally over and the games actually count again.  It also gives me a good excuse to take road trips and see some new places.
@@ -39,11 +39,11 @@ I'll do my best to keep you informed of my travels.  Hope you are able to get ou
 Mike McCann
 
 
-<I>
+<em>
 Mike is always looking for people to attend baseball games with him, so if you are interested, please contact him at <a href="mailto:bunko@udel.edu">bigbunko@netzero.net</a>
 
 Learn more about Bunko's quest to visit every major and minor league stadium: <a href="http://www.netcolony.com/sports/bunko/" TARGET="_top">http://www.netcolony.com/sports/bunko/</a>
-</I>
+</em>
 
 
 <HR>
