--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_dervil_burlow.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_dervil_burlow.html
@@ -8,9 +8,9 @@
 
 <BODY>
 <H2>Dervil Burlow</H2>
-<I>
+<em>
 by Richard Johnson
-</I>
+</em>
 
 Dervil Burlow was "hanging on by his fingernails."
 
@@ -176,7 +176,7 @@ career with a lifetime batting average of .267.
 It was a long time before Dervil could set the newspaper aside. He was a man with a very bad headache, but he stood a good chance of once again being a knuckleball pitcher with all his faculties intact.
 
 
-<I>Richard Johnson is a baseball-deprived American journalist who has spent the last 16 years living outside the USA. After job assignments in Germany and Japan, he now lives in London with his wife and four daughters.</I>
+<em>Richard Johnson is a baseball-deprived American journalist who has spent the last 16 years living outside the USA. After job assignments in Germany and Japan, he now lives in London with his wife and four daughters.</em>
 
 
 <HR>
