--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_hungary_for_the_game.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_hungary_for_the_game.html
@@ -8,9 +8,9 @@
 
 <BODY>
 <H2>Hungary For The Game</H2>
-<I>
+<em>
 by Sam Margolis
-</I>
+</em>
 
 The biggest concern for those in the vicinity of a Bosarkanyi Egyfejuek-Bekescsabai Villamok baseball match is not so much the current score nor even how many runners are on base for the opposing team, but rather that a foul ball should not shatter the dining room window and disrupt a second helping of Sunday goulash. Nevertheless those living near some of Hungary's makeshift baseball diamonds have had to deal with this worry since the Hungarian National Baseball Federation was established in 1992.
 
@@ -43,7 +43,7 @@ Borbely's own interest in the sport began after his son, a judo champion, return
 "Our hope is to have a team ready to compete in the 2004 Olympic Games in Athens," Borbely asserted.
 
 
-<I>Sam Margolis is a former Peace Corps volunteer and Yankee fan who is in Hungary as a journalist.  More of Sam's non-baseball material can be found at <a href="http://www.chortler.com">www.chortler.com</a></I>
+<em>Sam Margolis is a former Peace Corps volunteer and Yankee fan who is in Hungary as a journalist.  More of Sam's non-baseball material can be found at <a href="http://www.chortler.com">www.chortler.com</a></em>
 
 Photos of the Ajka Blackbirds by Szabolcs Garai.  More photos online at <a href="http://www.nexus.hu/feketerigok/fotogaleria.htm">www.nexus.hu/feketerigok/fotogaleria.htm</a>
 
