--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_life_on_the_road.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_life_on_the_road.html
@@ -8,9 +8,9 @@
 
 <BODY>
 <H2>Life On The Road</H2>
-<I>
+<em>
 by Frank Priegue
-</I>
+</em>
 
 The ballplayers begin to arrive at around 6:15 AM, many of them rubbing the sleep out of their eyes as they pack their equipment on the bus.  The team bus pulls out of the Yale Field parking lot at 7:00 AM.  Any player who misses the bus has to find his own way from Connecticut to Maryland -- he will also get fined and may get in trouble with the organization.
 
@@ -44,7 +44,7 @@ Travel days are a difficult part of road trips.  One these days, teams will rent
 
 When the evening's game ends, the cycle continues.  The players will shower, dress and pack up their equipment.  They load up the bus and it is time to travel again.  If there is no post-game meal, the bus will stop at some fast-food restaurant at a rest stop on the way to the next city.  Once the team boards the bus, some will play cards or dominoes, some will plug their headphones into portable CD players, and others will sleep.  While some players fall asleep easily, others struggle, never learning how to sleep on a bus.  It is part of the cycle that continues throughout the season.  Arriving in a different town at all hours of the night.  Some may arrive tired and have a sub-par game the next day, but they know they have to have the proper mindset.  Tomorrow, there is another game to play.
 
-<I>Frank Priegue is a New York-based photographer and author who deals with his baseball withdrawal syndrome by traveling to Eastern League ballparks.  See Frank's journey chronicled at <a href="http://www.twostepsaway.com">www.twostepsaway.com</a>.</I>
+<em>Frank Priegue is a New York-based photographer and author who deals with his baseball withdrawal syndrome by traveling to Eastern League ballparks.  See Frank's journey chronicled at <a href="http://www.twostepsaway.com">www.twostepsaway.com</a>.</em>
 
 
 <HR>
