--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_letter_from_publisher.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_letter_from_publisher.html
@@ -17,7 +17,7 @@ My guess is that teams will have to cease these flying t-shirt promotions for fe
 
 Personally, I could do without flying t-shirt promotions, but it keeps my pre-teen daughter semi-interested in the game.  On the other hand, we are both HUGE batting practice fans, and we would be pretty ticked off if we got shut out of our pre-game bonding ritual.
 
-I think Rockford Peach manager Jimmy Dugan sums it up my feelings on the issue perfectly:  <B><I>There's no crying in baseball.</B></I>
+I think Rockford Peach manager Jimmy Dugan sums it up my feelings on the issue perfectly:  <B><em>There's no crying in baseball.</B></em>
 
 So try on a little responsibility, people!  You t-shirt wussies and batting practice cry-babies can take your tears and your greedy lawsuits and go home and lock yourselves in a room full of pillows.  You dumb asses who claim things like "I didn't know that the hot coffee would burn me if it spilled into my lap" can just stay the hell out of our baseball stadiums.  If this big bad world is too much for you, at least don't spoil it for the rest of us.
 
