--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_limericks.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_limericks.html
@@ -8,7 +8,7 @@
 
 <BODY>
 <H2>Baseball Limericks</H2>
-<i>by Bennett Oberfeld</i>
+<em>by Bennett Oberfeld</em>
 
 
 When you ask Mr. Cub Ernie Banks
@@ -25,9 +25,9 @@ So did he blow that late lead to appease us?"
 
 
 
-<I>Bennett Oberfeld has been a die-hard baseball fan for over 30 years, rooting for home town teams starting with the Orioles, to the Cubs, now for the Braves.  He has been to 24 of the 30 existing ball parks, but refuses to see a game in Montreal Olympic Stadium or the Metrodome.</I>
+<em>Bennett Oberfeld has been a die-hard baseball fan for over 30 years, rooting for home town teams starting with the Orioles, to the Cubs, now for the Braves.  He has been to 24 of the 30 existing ball parks, but refuses to see a game in Montreal Olympic Stadium or the Metrodome.</em>
 
-<I>See more of Bennett's work at: </I><a href="http://www.sportsweekly.net">www.SportsWeekly.net</a>
+<em>See more of Bennett's work at: </em><a href="http://www.sportsweekly.net">www.SportsWeekly.net</a>
 
 <HR>
 <a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
