--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_missing_october.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_missing_october.html
@@ -9,16 +9,16 @@
 <BODY>
 <H2>Missing October</H2>
 <H4>Baseball, heroes, love and Dad</H4>
-<I>by Jess Zielinski</I>
+<em>by Jess Zielinski</em>
 
 
-<B><I>OCTOBER IS THE CRUELEST MONTH.</B></I> It brings both the apogee and the end of baseball, ushering in winter's shrinking days, closed-in spaces, puffy coats with collars you can barely see over and the realization that you will get snow stuck in that space between your wrist and your gloves.
+<B><em>OCTOBER IS THE CRUELEST MONTH.</B></em> It brings both the apogee and the end of baseball, ushering in winter's shrinking days, closed-in spaces, puffy coats with collars you can barely see over and the realization that you will get snow stuck in that space between your wrist and your gloves.
 
 In our house October was a mixed celebration that depended on one's beliefs. My mother and older sister, who believed that football was divine inspiration, stood firmly on one side. In the opposing camp, my dad and I thought such heathens could not appreciate the elegant holiness of baseball.
 
 While the matriarch and her first daughter settled into the comfort of succeeding Sundays on warm corners of the couch, with snack foods and first downs, my father and I mourned the loss of extra innings, double plays and days of catch in the green green grass.
 
-Baseball isn't a normal sport. If it were, then it wouldn't be strange that grown men cry at movies depicting it. Sure, men cry at other films, but it's different. Baseball movies often elicit the incomplete emotions that sons have for fathers in ways other films do not. If you're a man and you've seen <I>Field of Dreams</I>, you understand. The scene where Kevin Costner's character and his dad get another chance to play catch signifies all of those times you played catch and all of those chances you and he missed saying what you wanted to say.
+Baseball isn't a normal sport. If it were, then it wouldn't be strange that grown men cry at movies depicting it. Sure, men cry at other films, but it's different. Baseball movies often elicit the incomplete emotions that sons have for fathers in ways other films do not. If you're a man and you've seen <em>Field of Dreams</em>, you understand. The scene where Kevin Costner's character and his dad get another chance to play catch signifies all of those times you played catch and all of those chances you and he missed saying what you wanted to say.
 
 For me, the scene means finally understanding what my dad meant by teaching me about baseball. To misquote Tolstoy, every father-child relationship is strange in its own way. But fathers and daughters negotiate unmarked territory: There isn't the bond that naturally develops between genders, but there is sometimes that awkward attempt to understand each other.
 
@@ -26,7 +26,7 @@ I started to love baseball because of the 1986 World Series between the Mets and
 
 Then the summer before my senior year in college, we went to Cooperstown. I was feeling down because I had just been dumped by the greatest guy in the world, my mother was annoying me with her advice on my wardrobe, and I had just discovered that my sister was the biggest obstacle I would ever have toward inner peace. Stuff everyone feels at one time or another.
 
-My dad and I drove three days to get to Cooperstown from our home in Washington, D.C. Along the way we listened to Joseph Campbell's <I>The Hero With A Thousand Faces</I> and associated mythology and baseball and heroes who need to fail to value success. In the quiet times, I lamented my seemingly unhappy life while my father occasionally pointed out oddities in the Pennsylvania landscape.
+My dad and I drove three days to get to Cooperstown from our home in Washington, D.C. Along the way we listened to Joseph Campbell's <em>The Hero With A Thousand Faces</em> and associated mythology and baseball and heroes who need to fail to value success. In the quiet times, I lamented my seemingly unhappy life while my father occasionally pointed out oddities in the Pennsylvania landscape.
 
 When we got to Cooperstown, my dad confessed that he hadn't been there since he was about 10, when his father took the trip with him. As we wandered through the exhibits, I watched my father's smile expand and extend, and I noticed the way he would shake his head just a bit at some statistic. I wondered all the time if he felt like he did when he was 10 years old.
 
@@ -35,9 +35,9 @@ I realize now that that trip and all those games of catch -- all of it was my da
 Every winter my dad finds ways not to miss baseball. He'll read player biographies or go to memorabilia auctions. He'll go to expositions to meet past players. He'll rearrange yet again his vintage baseball collection. He'll spend hours looking through catalogues for antique bats. I have a different strategy. I choose to remember all the ways he used the game to tell me what he thought I should know, always risking that he would say the wrong thing, always knowing it was worth the unknowable outcome.
 
 
-<I>This article first appeared in the November 17th, 1999 issue of Panic Magazine and is re-printed by permission.</I>
+<em>This article first appeared in the November 17th, 1999 issue of Panic Magazine and is re-printed by permission.</em>
 
-<I>Please visit Panic Magazine online at </I><a href="http://www.panicmag.com">www.panicmag.com</a>.
+<em>Please visit Panic Magazine online at </em><a href="http://www.panicmag.com">www.panicmag.com</a>.
 
 <HR>
 <a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
