--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_my_final_high_school_season.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_my_final_high_school_season.html
@@ -8,7 +8,7 @@
 
 <BODY>
 <H2>My Final High School Season</H2>
-<I>by Jason Patzfahl</I>
+<em>by Jason Patzfahl</em>
 
 
 The sun was hiding somewhere far behind the clouds of winter as layers of gray pillowed the air overhead.  Fresh snow, two or three inches thick where the drift carried it, covered the grass which had been dead since last November.  Our star pitcher stood in front of me, talking to his brother about something juvenile.  With every immature utterance from his mouth, a puff of white breath formed in front of him.  His nose ran uncontrollably, making him sniff between every word.
@@ -24,7 +24,7 @@ As you already know, the first day of practice for my senior season was no diffe
 We survived that year, as we did every other year, and we ended up capturing the conference title with a win of the second game of a doubleheader on the last day of the season.  I played first base the first game so I could save my knees for the second.  I threw out two runners trying to steal second and took a pounding in my temple from some guy's right shoulder during a collision at home plate.  In the playoffs, we lost our regional game against the defending state champs in an 11-inning fight in the blistering 75-degree heat.  If it had been freezing and cloudy, we might have stood a chance.  We lived, however, and some of us cried on the final bus trip home, wondering what it must be like to be able to play baseball any season of the year like they do in Florida and Arizona.  Our star pitcher and a couple of other guys made it to college and they all picked a warm location in which the climate seemed invented for baseball.  As for me, I think that the game of baseball can defy climate if you love it enough.
 
 
-<I>Jason Patzfahl is a die-hard Brewers fan who likes to throw peanut shells at the opposing batters in the on-deck circle at home games, and sends pictures of his dog's butt to Marge Schott and jail cell pics to Daryl Strawberry.  Anyone know a good defense lawyer?</I>
+<em>Jason Patzfahl is a die-hard Brewers fan who likes to throw peanut shells at the opposing batters in the on-deck circle at home games, and sends pictures of his dog's butt to Marge Schott and jail cell pics to Daryl Strawberry.  Anyone know a good defense lawyer?</em>
 
 
 <HR>
