--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ryans_corner.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ryans_corner.html
@@ -8,7 +8,7 @@
 
 <BODY>
 <H2>Ryan's Corner</H2>
-<I>by Ryan, age 11</I>
+<em>by Ryan, age 11</em>
 
 
 <H3>The Top Five Ways To Make Baseball Games More Interesting For Me</H3>
