--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tarot_1.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tarot_1.html
@@ -9,9 +9,9 @@
 <BODY>
 <H2>Tarot and Baseball, Part 1</H2>
 <H3>- covering the bases -</H3>
-<I>
+<em>
 by Kerri S. McIntire
-</I>
+</em>
 
 <P>Using the Internet as my research tool, I discovered no less than three Tarot card decks inspired by the Great American Pastime. These are the <B>Tarot of Baseball </B>(U. S. Games Inc.) by Beverly Ransom and Robert Kasher, the <B>Baseball Tarot</B> (Workman Publishing) by Laura Philips and Mark Lerner, and the <B>Tarot de Cooperstown</B> by Jim Markowich and Paul Kuhrman. </P>
 
@@ -30,7 +30,7 @@ by Kerri S. McIntire
 
 <P>Although they also represent experiences, the <B>major arcana</B> <B>cards</B> do not follow suits. Their concepts are bigger than any situation or behavior. In baseball terms, if the minor arcana cards are the plays and court cards and the players, then the 22 major arcana card<B>s</B> are the overall dynamics of the game. </P>
 
-<P>And now that I've begun the baseball analogies, I want to praise the <B>Tarot of Baseball</B>, the<B> Baseball Tarot</B>, and the <B>Tarot de Cooperstown</B> for being great comparative studies of two very complex concepts. The Tarot and baseball <I>can</I> be linked, and linked so well that there is room for all three interpretations. No one is particularly best, so I will focus my review on discussing individual strengths and weaknesses.</P>
+<P>And now that I've begun the baseball analogies, I want to praise the <B>Tarot of Baseball</B>, the<B> Baseball Tarot</B>, and the <B>Tarot de Cooperstown</B> for being great comparative studies of two very complex concepts. The Tarot and baseball <em>can</em> be linked, and linked so well that there is room for all three interpretations. No one is particularly best, so I will focus my review on discussing individual strengths and weaknesses.</P>
 <FONT SIZE=1>
 </FONT><P>I'll begin with the names of the four suits:</P>
 <FONT SIZE=1><P ALIGN="CENTER"></P>
@@ -40,13 +40,13 @@ by Kerri S. McIntire
 <P>Swords (air)&#9;&#9;Balls&#9;&#9;&#9;Balls&#9;&#9;&#9;&#9;Bases</P>
 <P>Disks (earth)&#9;&#9;Bases&#9;&#9;&#9;Caps&#9;&#9;&#9;&#9;Balls</P>
 
-<P>All three decks use <B>Bats</B> for <B>Wands</B> -- the <I>fire</I> suit symbolizing creative experiences. The Wand is a lightning rod that absorbs power from without and uses it to spark power from within. The bat is the instrument by which a hitter can channel the energy of a pitched ball into an expression of his or her own inner individual force.</P>
+<P>All three decks use <B>Bats</B> for <B>Wands</B> -- the <em>fire</em> suit symbolizing creative experiences. The Wand is a lightning rod that absorbs power from without and uses it to spark power from within. The bat is the instrument by which a hitter can channel the energy of a pitched ball into an expression of his or her own inner individual force.</P>
 
-<P>All the decks use a <B>Glove</B>, or <B>Mitt</B>, for <B>Cups</B>. This is fitting, as the <I>water</I> suit symbolizes emotional experiences like receptivity, flexibility and relating. The catcher is clearly in a receptive relationship with the pitcher. The fielders, too, are in a position of receiving and cooperation. It is the give-and-take interplay of gloves that creates a team.</P>
+<P>All the decks use a <B>Glove</B>, or <B>Mitt</B>, for <B>Cups</B>. This is fitting, as the <em>water</em> suit symbolizes emotional experiences like receptivity, flexibility and relating. The catcher is clearly in a receptive relationship with the pitcher. The fielders, too, are in a position of receiving and cooperation. It is the give-and-take interplay of gloves that creates a team.</P>
 
-<P>For <B>Swords</B>, the suit of mental experiences, the decks disagree. <B>Balls </B>do seem better than <B>Bases</B> for representing the element of <I>air</I>, and a lot strategy lies in how the ball is pitched, hit or fielded. But this suit is about maneuvering for an advantage. Runners try to win the bases, and fielders try to defend them. This is baseball's true match of wits and agility.</P>
+<P>For <B>Swords</B>, the suit of mental experiences, the decks disagree. <B>Balls </B>do seem better than <B>Bases</B> for representing the element of <em>air</em>, and a lot strategy lies in how the ball is pitched, hit or fielded. But this suit is about maneuvering for an advantage. Runners try to win the bases, and fielders try to defend them. This is baseball's true match of wits and agility.</P>
 
-<P>The decks also disagree on <B>Disks</B>. This is the suit of <I>earth</I> experiences, and so <B>Bases</B> are the natural symbol. <B>Balls</B> work well visually, as they are disk-shaped in two-dimensional drawings. But the most interesting icon to me is <B>Caps</B>.<B> </B>Baseball<B> </B>caps sport the team logo and franchise name--those things that give a ball player worldly sustenance and identity. </P>
+<P>The decks also disagree on <B>Disks</B>. This is the suit of <em>earth</em> experiences, and so <B>Bases</B> are the natural symbol. <B>Balls</B> work well visually, as they are disk-shaped in two-dimensional drawings. But the most interesting icon to me is <B>Caps</B>.<B> </B>Baseball<B> </B>caps sport the team logo and franchise name--those things that give a ball player worldly sustenance and identity. </P>
 
 <P>Now I'll discuss how each deck presents the <B>minor arcana cards</B>--the aces through tens of each suit. I'll begin with the <B>Tarot of Baseball</B>, created by Robert Kasher, drawn by Beverly Ransom, and published by U. S. Games Systems, Inc. of Stamford, Connecticut.</P>
 
@@ -78,19 +78,19 @@ by Kerri S. McIntire
 
 <P>In other words, the minor arcana and court cards symbolize experiences and behaviors to which we can draw specific reference at a certain point in our lives. The major arcana cards, though, represent concepts larger than any one experience or behavior. In baseball terminology, they describe the overall dynamics of the sport and the energy it generates.</P>
 
-<P>The <B>Tarot of Baseball</B> takes an effective line on this by casting baseball &quot;icons&quot; as the major arcana. These are generic team members like <U>The Pinch Hitter</U>, generic on-field incidents like <U>The Falling Outfielder</U>, and generic off-field personalities like <U>The Owner</U>. Generic not because they are bland, but because they are <I>universal to the game</I>. </P>
+<P>The <B>Tarot of Baseball</B> takes an effective line on this by casting baseball &quot;icons&quot; as the major arcana. These are generic team members like <U>The Pinch Hitter</U>, generic on-field incidents like <U>The Falling Outfielder</U>, and generic off-field personalities like <U>The Owner</U>. Generic not because they are bland, but because they are <em>universal to the game</em>. </P>
 
-<U><P>Justice</U> is one of the major arcana cards of the Tarot. It signifies equity, rightness, probity and making the call about what is true. The <B>Tarot of Baseball</B> has <U>The Umpire </U>as<U> Justice</U>. If you'll remember, umpires appear in this same deck as <U>Pages</U>. Those umpires represent specific behaviors. <U>The Umpire</U> is an <I>overall symbol</I> for the concept of justice in baseball. </P>
+<U><P>Justice</U> is one of the major arcana cards of the Tarot. It signifies equity, rightness, probity and making the call about what is true. The <B>Tarot of Baseball</B> has <U>The Umpire </U>as<U> Justice</U>. If you'll remember, umpires appear in this same deck as <U>Pages</U>. Those umpires represent specific behaviors. <U>The Umpire</U> is an <em>overall symbol</em> for the concept of justice in baseball. </P>
 <P>Robert Kasher writes it meaning as:</P>
 <FONT SIZE=1>
-</FONT><P>Upright<I>: An inability to be corrupted by the pressures of the game.</P>
-</I><P>Reverse:<I> Too quick in judgment. Injustice.</P>
-</I>
+</FONT><P>Upright<em>: An inability to be corrupted by the pressures of the game.</P>
+</em><P>Reverse:<em> Too quick in judgment. Injustice.</P>
+</em>
 <U><P>Judgment</U> is also a card in the traditional major arcana. <U>Judgment</U> differs from <U>Justice</U> in the same way that heavenly review differs from earthly law. It is the &quot;higher court&quot; with a wider interpretation of truth. I like that Robert Kasher has <U>The Sportscaster</U> as <U>Judgment</U>. His meaning for it is: </P>
 <FONT SIZE=1>
-</FONT><P>&#9;Upright: <I>Awareness of the team's good points and bad points. Objectivity.</P>
-</I><P>&#9;Reverse: <I>Disillusionment, vindictiveness.</P>
-</I>
+</FONT><P>&#9;Upright: <em>Awareness of the team's good points and bad points. Objectivity.</P>
+</em><P>&#9;Reverse: <em>Disillusionment, vindictiveness.</P>
+</em>
 <P>The major arcana cards of the <B>Tarot of Baseball</B> pay clever homage to Waite-Smith both in design and meaning. I'll end with my favorite: <U>The Hanged Man</U> as <U>The Hung-up Man</U>.</P>
 <P>Notice how Beverly Ransom crossed the legs here in the traditional manner, and how she located the stadium lights to imitate the tree. Robert Kasher's translation of it as &quot;dawning wisdom, hard won experience&quot; is also commendable. <U>The Hanged Man</U> is too often seen as a negative card. While it may be true that the present circumstances are disorienting or uncomfortable, the final outcome is always enlightenment.</P>
 
@@ -101,8 +101,8 @@ by Kerri S. McIntire
 <P>The Waite-Smith examples are also from a deck published by U. S. Games Systems, Inc. </P>
 
 <P>&nbsp;</P>
-<I><P>BIO: <FONT FACE="Times">Kerri McIntire is a Tarot enthusiast who saw a future in working with the past. She and her better half Dave Buckhout run </I>InHeritage<I>, an Internet design company specializing in historical presentations. For more information, visit <a href="http://www.inheritage.org"></I>www.InHeritage.org<I></a>.</P>
-</I></FONT>
+<em><P>BIO: <FONT FACE="Times">Kerri McIntire is a Tarot enthusiast who saw a future in working with the past. She and her better half Dave Buckhout run </em>InHeritage<em>, an Internet design company specializing in historical presentations. For more information, visit <a href="http://www.inheritage.org"></em>www.InHeritage.org<em></a>.</P>
+</em></FONT>
 
 <HR>
 <a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
